@@ -3680,6 +3680,7 @@ STR_6363    :Copied text to clipboard
 STR_6364    :{RED}{COMMA16} person has died in an accident on {STRINGID}
 STR_6365    :Ride casualties
 STR_6366    :Stuck or stalled vehicles
+STR_6367    :{WINDOW_COLOUR_2}Animation frame:
 
 #############
 # Scenarios #
